--- a/.github/workflows/poetry.yml
+++ b/.github/workflows/poetry.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ['3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
         poetry-version: [1.7.1]
         os: ["ubuntu-latest", "windows-latest"]
     steps:
@@ -27,6 +27,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+          allow-prereleases: true
           cache: "poetry"
       - name: Check shell scripts
         uses: ludeeus/action-shellcheck@2.0.0
